--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
-    "@reduxjs/toolkit": "^1.5.0",
     "@hot-loader/react-dom": "^16.8.6",
+    "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.5.0",
@@ -23,7 +24,9 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.8.1",
     "react-hot-loader": "^4.13.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2"
   },
