--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build~~old": "webpack --config webpack.config.js",
-    "build":  "webpack-dev-server -d --config ./webpack.config.js",
+    "build~~old2":  "webpack-dev-server -d --config ./webpack.config.js",
+    "build": "webpack --mode production",
     "start~~old": "node server.js --hot --inline",
     "start:dev": "webpack-dev-server -d --config ./webpack.config.js",
     "start": "webpack-dev-server -d --config ./webpack.config.js"
