--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "heroku": "^7.51.0",
     "html-webpack-plugin": "^4.5.0",
+    "localtunnel": "^2.0.1",
     "ls": "^0.2.1",
     "react": "^16.8.1",
     "react-bootstrap": "^1.4.0",
